# pmap

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: chunk.rs  lib.rs  pmap.rs  tests.rs
