[package]
name = "pmap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
log = "*"
env_logger = "*"
pretty_env_logger = "*"
rand = "0.8"
criterion = "0.3"
md5 = "0.7"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
crossbeam-utils = { version = "0.8" }
rayon = { version = "1.5" }
arrayvec = { version = "0.7" }